# menu_app_FastAPI

./: .env  .pre-commit-config.yaml  .test.env  Dockerfile  README.md  docker-compose-pytest.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
admin/: Menu.xlsx
alembic/: env.py
alembic/versions/: 2024_01_21_1609-a08a085d56ee_create_menu_dish_and_submenu_tables.py  2024_01_21_1639-3db54ec77569_upgrade_dish_and_submenu_tables.py  2024_01_21_1656-bff4df20397e_upgrade_dish_table.py  2024_01_22_1558-f7443303b4c9_change_field_price_for_model_dish.py  2024_02_13_2313-68f963649577_create_dish_discount.py
api_v1/: __init__.py
api_v1/dishes/: crud.py  dependencies.py  responses.py  schemas.py  service_repository.py  views.py
api_v1/menus/: cache.py  cache_crud.py  cache_repository.py  crud.py  dependencies.py  responses.py  schemas.py  service_repository.py  views.py
api_v1/submenus/: cache_repository.py  crud.py  dependencies.py  responses.py  schemas.py  service_repository.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  dish.py  menu.py  submenu.py
core/redis/: __init__.py  cache_repository.py  redis_helper.py
dishes/: crud.py  schemas.py  views.py
docker/: app.sh
tasks/: db_updater.py  parser.py  tasks.py
tests/: conftest.py  fixtures.py  service.py  test_03_dishes.py  test_04_counter.py  test_menu.py  test_submenus.py
tests/counter/: test_04_counter.py
tests/dishes/: fixtures.py  test_03_dishes.py
tests/menus/: fixtures.py  test_01_menus.py
tests/submenus/: fixtures.py  test_02_submenus.py
